[package]
name = "bl602-ws2811"
version = "0.1.0"
authors = ["kiyoshigawa"]
edition = "2021"

[dependencies]
riscv-rt = "0.8.0"
embedded-hal = "=1.0.0-alpha.5"
# Only using the local copy while I am working on updating the timers in the hal:
bl602-hal = { path = "../bl602-hal" }
panic-halt = "0.2.0"
riscv = "0.7.0"
embedded-time = "0.12.0"
nb = "1.0.0"
bitvec = { version = "0.22.3", default-features = false }

# You probably don't want to use a debug build, but lots of people accidentally do
# give the code at least a low level of optimization
[profile.dev]
codegen-units = 1
lto = true
opt-level = 1

# Different optimization level for dependencies in debug mode
# So you can keep the main code more debuggable and still save some space
[profile.dev.package."*"]
opt-level = "z"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# opt-level = "z" # optimize for size instead of speed
